codex-rs/tui2/src/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
# tui2/src/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
• Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
